--- a/bootstrap.html
+++ b/bootstrap.html
@@ -110,7 +110,7 @@
 					<h2>Goed geholpen?</h2>
 					<p>
 						Schroom dan niet om een review achter te laten op <a
-							href="http://independer.nl">Independer</a>
+							href="http://independer.nl">Independr</a>
 					</p>
 					<!-- sidebox -->
 				</div>
